dark mode mostly working correctly, small refresh bug

--- a/src/components/square/style.scss
+++ b/src/components/square/style.scss
@@ -1,5 +1,4 @@
 .box {
-  background: white !important;
   border: none !important;
   border-radius: 10% !important;
   box-shadow: 0 0 8px #888;
@@ -14,17 +13,28 @@
   &:hover {
     transform: scale(1.1);
   }
-}
 
-.x {
-  color: rgb(255 70 37) !important;
-}
+  &.x {
+    color: rgb(255, 70, 37) !important;
 
-.o {
-  color: rgb(44 135 255) !important;
-}
+    &.light {
+      background: white !important;
+    }
 
-.x,
-.o {
-  transition: 250ms ease all !important;
+    &.dark {
+      background: #444 !important;
+    }
+  }
+
+  &.o {
+    color: rgb(44, 135, 255) !important;
+
+    &.light {
+      background: white !important;
+    }
+
+    &.dark {
+      background: #444 !important;
+    }
+  }
 }
